home-header alignment correction

--- a/src/stylesheets/home/Homeheader.css
+++ b/src/stylesheets/home/Homeheader.css
@@ -75,6 +75,7 @@
 
 .homeheaderElement_1 {
 	max-width: 450px;
+	margin: 50px 20px;
 }
 
 .textelement {
